Rename the project.

--- a/eclispe_attach_debug/.project
+++ b/eclispe_attach_debug/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>eclispe-attach-debug</name>
+	<name>eclispe_attach_debug</name>
 	<comment></comment>
 	<projects>
 	</projects>
